<resources>
    <string name="app_name">Notepad</string>
    <string name="todo">todo</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="search_notes">Search Notes…</string>
    <string name="pin_unpin">Pin/Unpin</string>
    <string name="delete">Delete</string>
    <string name="list_grid">List/Grid</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="empty">Empty…</string>
    <string name="banner_ads">ca-app-pub-7450127230297437/8226201118</string>
    <string name="interstitial_ad">ca-app-pub-7450127230297437/9156139405</string>
    <string name="are_you">Do you want to delete all notes?</string>
    <string name="yes">Yes</string>
    <string name="yoq">No</string>
</resources>