<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_empty"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:alpha="0.3"
                android:contentDescription="@string/todo"
                android:src="@drawable/empty_img" />

            <TextView
                android:id="@+id/text_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:alpha="0.3"
                android:text="@string/empty"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="name"
            android:background="@drawable/edit_round"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="15dp"
            android:fontFamily="@font/allerta"
            android:hint="@string/search_notes"
            android:inputType="text"
            android:paddingStart="15dp"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/adView"
            android:layout_below="@id/search_view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/gray"
            app:tint="@color/white" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ads" />

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>